--- a/index.html
+++ b/index.html
@@ -106,15 +106,12 @@
     </section> 
 
     <!--Testimonials block-->
-
-
-    <section class="testimonials">
+    <!-- <section class="testimonials">
         <div class="wrapper wrapper__section">
-            <div class="testimonials__item">
-                New code about testomials
+            <div class="testimonials__item">               
             </div>
         </div>    
-    </section>
+    </section> -->
     <section class="advantages">
         <div class="wrapper wrapper__section">
             <div class="advantages__item">
