--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                         <li><a href="#">Find a doctor</a></li>
                         <li><a href="#">Apps</a></li>
                         <li><a href="#">Testimonials</a></li>
-                        <li><a href="#">About us</a></li>
+                        <!--<li><a href="#">About us</a></li>-->
+                        <li><a href="#">About us hello</a></li>
                     </ul>
                 </nav>
                 <div class="hidden-menu">
