--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Site about medicine   </title>
+    <title>Site about medicine </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,500;0,600;0,800;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">  
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css"> 
-
 </head>
 <body>
     <header class="header">
@@ -51,8 +49,7 @@
             </div>    
             <div class="header__bottom">
                 <div class="header__bottom-info">
-                    <h1>Virtual healthcare 
-                        for you</h1>
+                    <h1>Virtual healthcare  for you</h1>
                     <p>Trafalgar provides progressive, and affordable 
                         healthcare, accessible on mobile and online 
                         for everyone</p> 
@@ -106,13 +103,7 @@
         </div>
     </section> 
 
-    <!--Testimonials block-->
-    <!-- <section class="testimonials">
-        <div class="wrapper wrapper__section">
-            <div class="testimonials__item">               
-            </div>
-        </div>    
-    </section> -->
+
     <section class="advantages">
         <div class="wrapper wrapper__section">
             <div class="advantages__item">
@@ -136,6 +127,15 @@
                 <div class="advantages__pic advantages__pic-second"></div>
                 
                 
+            </div>
+        </div>    
+    </section>
+    <!--Testimonials block-->
+    <section class="testimonials">
+        <div class="wrapper wrapper__section">
+            <div class="testimonials__item">   
+                <h2>What our customer are saying</h2>
+                <div class="testimonials__logo"></div>            
             </div>
         </div>    
     </section>
