team lead change

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </nav>
                 <div class="hidden-menu">
                     <input type="checkbox">
-                    <span class="line"></span>
+                    <input type="text" class="line">
                     <span class="line"></span>
                     <span class="line"></span>
                     
@@ -53,7 +53,7 @@
                     <p>Trafalgar provides progressive, and affordable 
                         healthcare, accessible on mobile and online 
                         for everyone</p> 
-                    <a href="#" class="button button-solid">Consult today</a>       
+                    <a  class="button button-solid"  href="#">Consult today</a>       
                 </div>
                 <div class="header__bottom-pic"></div>
             </div>
