--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </nav>
                 <div class="hidden-menu">
                     <input type="checkbox">
-                    <input type="text" class="line">
+                    <span class="line"></span>
                     <span class="line"></span>
                     <span class="line"></span>
                     
@@ -59,51 +59,7 @@
             </div>
         </div>
     </header>
-    <section class="services">
-        <div class="wrapper wrapper__section">
-            <div class="services__info">
-                <h2>Our services</h2>
-                <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
-            </div>
-            <div class="services__gallery">
-                <div class="services__gallery-item">
-                    <div class="services__gallery-item-pic"><i class="ico ico-search"></i></div>
-                    <h3>Search doctor</h3>
-                    <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
-                </div>
-                <div class="services__gallery-item">
-                    <div class="services__gallery-item-pic"><i class="ico ico-online"></i></div>
-                    <h3>Online pharmacy</h3>
-                    <p>Buy  your medicines with our mobile application with a simple delivery system</p>
-                </div>
-                <div class="services__gallery-item">
-                    <div class="services__gallery-item-pic"><i class="ico ico-consultation"></i></div>
-                    <h3>Consultation</h3>
-                    <p>Free consultation with our trusted doctors and get the best recomendations</p>
-                </div>
-                <div class="services__gallery-item">
-                    <div class="services__gallery-item-pic"><i class="ico ico-details "></i></div>
-                    <h3>Details info</h3>
-                    <p>Free consultation with our trusted doctors and get the best recomendations</p>
-                </div>
-                <div class="services__gallery-item">
-                    <div class="services__gallery-item-pic"><i class="ico ico-emergency"></i></div>
-                    <h3>Emergency care</h3>
-                    <p>You can get 24/7 urgent care for yourself or your children and your
-                        lovely family</p>
-                </div>
-                <div class="services__gallery-item">
-                    <div class="services__gallery-item-pic"><i class="ico ico-tracking"></i></div>
-                    <h3>Tracking</h3>
-                    <p>Track and save your medical history and health data </p>
-                </div>
-               
-            </div>
-            <a href="#" class="button button-default">Learn more</a>    
-        </div>
-    </section> 
-
-
+    <div class="wrapper"><h1>HELLO HELLO</h1></div>
     <section class="advantages">
         <div class="wrapper wrapper__section">
             <div class="advantages__item">
@@ -157,15 +113,7 @@
                         <li><a href="#">Apps</a></li>
                     </ul>
                 </div>
-                <div>
-                    <p>Region</p>
-                    <ul>
-                        <li><a href="#">Indonesia</a></li>
-                        <li><a href="#">Singapore</a></li>
-                        <li><a href="#">Hongkong</a></li>
-                        <li><a href="#">Canada</a></li>
-                    </ul>
-                </div>
+                <img src="">
                 <div>
                     <p>Help</p>
                     <ul>                        
