--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
                 <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
             </div>
             <div class="services__gallery">
-                <div class="services__gallery-item">
+                <div class="block1">
                     <div class="services__gallery-item-pic"><i class="ico ico-search"></i></div>
                     <h3>Search doctor</h3>
                     <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
                 </div>
-                <div class="services__gallery-item">
+                <div class="block1">
                     <div class="services__gallery-item-pic"><i class="ico ico-online"></i></div>
                     <h3>Online pharmacy</h3>
                     <p>Buy  your medicines with our mobile application with a simple delivery system</p>
                 </div>
-                <div class="services__gallery-item">
+                <div class="block1">
                     <div class="services__gallery-item-pic"><i class="ico ico-consultation"></i></div>
                     <h3>Consultation</h3>
                     <p>Free consultation with our trusted doctors and get the best recomendations</p>
@@ -95,9 +95,8 @@
                         lovely family</p>
                 </div>
                 <div class="services__gallery-item">
-                    <div class="services__gallery-item-pic"><i class="ico ico-tracking"></i></div>
-                    <h3>Tracking</h3>
-                    <p>Track and save your medical history and health data </p>
+                    <p></p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus corporis vel totam iste beatae illo est impedit similique ab fugit consectetur consequatur minima enim optio dolores, a laboriosam magni animi.</p>
                 </div>
                
             </div>
